fixed submit button not visible on mobile

--- a/src/styles/invite-form.module.css
+++ b/src/styles/invite-form.module.css
@@ -15,6 +15,12 @@
   gap: 2rem;
 }
 
+@media only screen and (max-width: 768px)  {
+  .form {
+    gap: 1rem;
+  }
+}
+
 .spacer {
   flex-grow: 1;
   flex-shrink: 1;
